# tds-proj1

./: LICENSE  README.md  api.py  embed.py  faiss_index.idx  main.ipynb  main.py  metadata.json  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  requirements.txt  scrape.ipynb  vercel.json
discourse_content/: 161071-which-subject-to-choose-in-jan-term.md  161072-can-i-take-the-end-term-exam-without-submitting-assignments-if-i-missed-it-due-to-an-emergency.md  161083-ga1-development-tools-discussion-thread-tds-jan-2025.md  161120-ga2-deployment-tools-discussion-thread-tds-jan-2025.md  161214-contribute-to-my-open-source-llm-classroom-assignment-evaluator.md  162425-tds-calendar-link-not-found.md  163144-way-of-conduction-of-exam.md  163147-tds-iitm-certified-books.md  163158-tds-jan-2025-calender-accesss-and-video-lecture-access-in-portal.md  163224-answers-are-not-getting-saved.md  163241-regarding-extra-material-information-resources-for-the-upcoming-project.md  163247-ga3-large-language-models-discussion-thread-tds-jan-2025.md  163381-need-friends.md  163765-score-keeps-resetting-to-0.md  164089-ta-sessions-youtube-links.md  164147-issues-in-tds-and-replacement-with-another-course.md  164205-need-clarity.md  164214-tds-project-1-release-information-required.md  164277-project-1-llm-based-automation-agent-discussion-thread-tds-jan-2025.md  164291-regarding-droping-from-tds.md  164460-agenda-for-todays-21-01-2025-session.md  164462-tds-assignment-week-2.md  164737-drop-course-window-for-tds.md  164869-agenda-for-todays-live-session-flask-tutorial.md  (+93 more)
(+1 files in other folders)
